correct magic square styles on mobile

--- a/css/_threeJsStyles.scss
+++ b/css/_threeJsStyles.scss
@@ -4,8 +4,8 @@ section.whiteSection.magicSquare {
 }
 
 section.whiteSection.magicSquare canvas {
-    height: auto;
-    width: 100vw;
+    height: auto !important;
+    width: 100vw !important;
 }
 
 @media (max-width: 820px) {
